--- a/Day18/package.json
+++ b/Day18/package.json
@@ -2,12 +2,11 @@
   "name": "day18",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://young-einstein10.github.io/30DaysOfCode/Day18/",
+  "homepage": "https://naija-news-7fa3d.firebaseapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
@@ -17,9 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
